--- a/profiles/templates/profiles/display_profile.html
+++ b/profiles/templates/profiles/display_profile.html
@@ -22,5 +22,5 @@
                 <h2 class="logo-font text-center text-uppercase mt-4">My Profile</h2>
             </div>
     </div>
- 
+ {{ profile }}
 {% endblock %}
