--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -14,7 +14,11 @@ body {
 }
 
 main {
-    flex-grow: 1 0 auto;    
+    flex-grow: 1; 
+    /* adjusted footer at bottom and at footer id also*/
+    padding-bottom: 310px;
+    height: 200%;
+    /*  */
 }
 .header-container {
     z-index: 10;
@@ -116,6 +120,11 @@ footer a {
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
     width: 100%;
     flex-shrink: 0;
+    /* adjusted footer at bottom */
+    position: relative;
+    margin-top: -310px;
+    height: 310px;
+    /*  */
 }
 
 .social-icon {
@@ -210,7 +219,7 @@ button:hover,
 }
 
  .message-container {
-    position: fixed;
+    /* position: fixed; */
     top: 72px;
     right: 15px;
     z-index: 99999999;
