--- a/products/templates/products/products_list.html
+++ b/products/templates/products/products_list.html
@@ -18,7 +18,6 @@
     </div>
 </div>
 {% endblock %}
-<div></div>
 {% block content %}
 <!-- <div class="filter-products"></div> -->
 <div class="overlay"></div>
@@ -107,9 +106,9 @@
                                     {% csrf_token %}
                                     <input type="hidden" name="product_id" value="{{ entry.product.id }}">
                                     {% if is_favorited %}
-                                        <button type="submit" class="btn btn-secondary btn-sm" formaction="{% url 'remove_from_favorites' entry.product.id %}">Remove from Favorites</button>
+                                        <button type="submit" class="btn btn-secondary btn-sm" formaction="{% url 'remove_from_favorites_product_list' entry.product.id %}">Remove from Favorites</button>
                                     {% else %}
-                                        <button type="submit" class="btn btn-secondary btn-sm" formaction="{% url 'add_to_favorites' entry.product.id %}">Add to Favorites</button>
+                                        <button type="submit" class="btn btn-secondary btn-sm" formaction="{% url 'add_to_favorites_product_list' entry.product.id %}">Add to Favorites</button>
                                     {% endif %}
                                 </form>
                             </div>
