--- a/templates/base.html
+++ b/templates/base.html
@@ -90,6 +90,7 @@
                                 <a href="{% url 'product_management' %}" class="dropdown-item">Product Management</a>
                             {% endif %}
                                 <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                                <a href="{% url 'favorite_products' %}" class="dropdown-item">My Favorite</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                             {% else %}
                                 <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
@@ -134,7 +135,7 @@
     </header>
     <main>
         {% if messages %}
-        <div class="message-container">
+        <div class="message-container float-right">
             {% for message in messages %}
                 {% with message.level as level %}
                     {% if level == 40 %}
