--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -14,7 +14,7 @@
     </div>
 {% endblock %}
 {% block content %}
-    <div class="overlay"></div>    
+    <div class="overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-12 text-center py-3">
@@ -52,4 +52,8 @@
 
         </div>
     </div>
+{% endblock %}
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
 {% endblock %}
