Update product admin, views and added urls

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -195,7 +195,7 @@ Bulma **** */
     width: 1.5rem;
 }
 .logo-font {
-    text-transform: capitalize;
+    text-transform: uppercase;
     color: black;
 }
 
