--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,7 @@
                         <div class="dropdown-menu border-0" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
                             {% if request.user.is_superuser %}
-                                <a href="{% url 'product_management' %}" class="dropdown-item">Product Management</a>
+                                <a href="{% url 'create_product' %}" class="dropdown-item">Product Management</a>
                             {% endif %}
                                 <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                 <a href="{% url 'favorite_products' %}" class="dropdown-item">My Favorite</a>
