--- a/products/templates/products/create_product.html
+++ b/products/templates/products/create_product.html
@@ -16,20 +16,20 @@
         <div class="row">
             <div class="col-12 col-md-6 mt-4">
                 <hr>
-                <h2 class="logo-font mb-4">Product Management</h2>
+                <h2 class="col-12 text-center logo-font pb-2 my-5">Product Management</h2>
                 <h5 class="text-muted text-center">Add a product</h5>
                 <hr>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-12">
-                <form enctype="multipart/form-data" method="POST" action="{% url 'product_management' %}" class="form mb-2">
+            <div class="col-12 col-md-6">
+                <form enctype="multipart/form-data" method="post" action="{% url 'create_product' %}" class="form mb-2">
                     {% csrf_token %}
                     {{ form | crispy }}
                     
                     <div class="text-right">
-                        <a class="btn btn-outline-black rounded" href="{% url 'product_management' %}">Cancel</a>
+                        <a class="btn btn-outline-black rounded" href="{% url 'products' %}">Cancel</a>
                         <button class="btn btn-black rounded" type="submit" >Create Product</button>
                     </div>
                 </form>
@@ -40,11 +40,11 @@
 {% endblock %}
 
 {% block postloadjs %}
-    {{ block.super }}
+    <!-- {{ block.super }}
     <script type="text/javascript">
         $('#new-image').change(function() {
             var file = $('#new-image')[0].files[0];
             $('#filename').text(`Image will be set to: ${file.name}`);
         });
-    </script>
+    </script> -->
 {% endblock %}
