--- a/products/templates/products/mandala_list.html
+++ b/products/templates/products/mandala_list.html
@@ -7,7 +7,7 @@
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
-        <div class="col-12 text-center text-uppercase logo-font pb-2 my-5">
+        <div class="col-12 text-center logo-font pb-2 my-5">
             <div class="header-text">Mandalas</div>
         </div>
     </div>
