--- a/products/templates/products/products_list.html
+++ b/products/templates/products/products_list.html
@@ -12,7 +12,7 @@
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
-        <div class="col-12 text-center text-uppercase logo-font my-5">
+        <div class="col-12 text-center logo-font my-5">
             <div class="header-text">Our Products</div>
         </div>
     </div>
@@ -86,13 +86,21 @@
                             <small class="text-muted"><i class="fas fa-star mr-1"></i>Comments (0) Likes (0) {{ product.rating }} /
                                 5</small>
                             {% else %}
-                            <small class="text-muted">Comments (0) Likes (0)</small>
+                            <small class="text-muted">
+                                <i class="fas fa-comment mr-1"></i>
+                                <a href="{% url 'enter_comment' entry.product.id %}">Comments ({{ entry.comment_count }})</a>
+                            </small>
+                            
                             {% endif %}
                             {% if request.user.is_superuser %}
-                                <small class="ml-3">
-                                    <a href="{% url 'edit_product' entry.product.id %}">Edit</a>
-                                    <a class="text-danger" href="{% url 'delete_product' entry.product.id %}">Delete</a>
-                                </small>
+                            <small class="ml-3">
+                                <i class="fas fa-edit mr-1"></i>
+                                <a href="{% url 'edit_product' entry.product.id %}">Edit  </a>
+                            </small>
+                            <small class="ml-3">
+                                <i class="fas fa-trash mr-1"></i>
+                                <a class="text-danger" href="{% url 'delete_product' entry.product.id %}">Delete</a>
+                            </small>
                             {% endif %}
                             <div class="d-flex">
                                 <form method="POST" action="{% url 'add_to_cart' entry.product.id %}" style="display: inline;">
