--- a/products/templates/products/thangka_paintings_list.html
+++ b/products/templates/products/thangka_paintings_list.html
@@ -7,7 +7,7 @@
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
-        <div class="col-12 text-center text-uppercase logo-font my-5">
+        <div class="col-12 text-center logo-font my-5">
             <div class="header-text">Thangka Paintings</div>
         </div>
     </div>
