--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -31,14 +31,8 @@
     </li>
     
     <li class="nav-item dropdown">
-      <a class="logo-font nav-link text-black mr-3" href="{% url 'article_list' %}" id="home-link">Blog Post</a>
+      <a class="logo-font nav-link text-black mr-3" href="{% url 'article_list' %}" id="home-link">Blog</a>
     </li>
-    
-    <!-- Contact Us -->
-    <li class="nav-item">
-      <a class="logo-font nav-link text-black mr-3" href="{% url 'about_us' %}" id="home-link">About Us</a>
-    </li>
-
     <!-- Contact Us -->
     <li class="nav-item">
       <a class="logo-font nav-link text-black mr-3" href="{% url 'contact_us' %}" id="home-link">Contact Us</a>
