Create About us page and updated url in footer.html

--- a/aboutus/templates/aboutus/about_us.html
+++ b/aboutus/templates/aboutus/about_us.html
@@ -14,16 +14,17 @@
 <!-- Main Content -->
 <div class="overlay"></div>
 <div class="container">
-    <h1 class="text-center section-title">About Us</h1>
+    <h1 class="my-5 text-center">About Us</h1>
 
     <!-- Content Sections -->
-    <div class="row">
+    <div class="row mb-5">
         <div class="col-lg-12">
-            <p>In the heart of 2014, a nascent idea blossomed into what would soon become a beacon of Tibetan artistry
-                in the digital world: the Tibet Art Shop. The concept emerged from a simple yet profound realization 
-                that the distinctive artistic expressions residing in the rural regions of Tibet and Nepal deserved a 
-                global platform, a platform that could resonate with art enthusiasts from all over the globe.</p>
-
+            <p>"In 2014, the Tibet Art Shop was established to showcase the unique artistry from rural Tibet and Nepal. 
+                Recognizing the significance of these art forms, the shop aimed to provide them with a global platform, 
+                connecting them with art enthusiasts worldwide."</p>
+                <div class="d-flex justify-content-center align-items-center">
+                    <img class="col-12 col-md-6 text-center my-3" src="https://res.cloudinary.com/dript5k0k/image/upload/v1693344310/jambhala-mh-2882_002_icdvhh.webp" width="300px" alt="Zambalha image on the wall">
+                </div>
             <h4>The Beginning</h2>
 
             <p>In the initial days, the journey was nothing short of an odyssey. Art enthusiasts ventured where few 
@@ -32,6 +33,8 @@
                 quaint villages, guardians of an age-old tradition of craftsmanship. These artists, often residing
                 in remote areas, were creating extraordinary pieces of art, yet their creations remained largely
                 secluded from the world, held back by the very mountains that nurtured them.</p>
+                <img class="col-12 col-md-4 mb-5 float-right text-center" src="https://res.cloudinary.com/dript5k0k/image/upload/v1695899334/2_p47ijt.webp" width="300px" alt="image of a Buddhist temple">
+
 
             <h4>The Mission</h2>
 
@@ -45,13 +48,15 @@
                 geographical boundaries. Through dirt tracks and bustling airports, a seamless channel emerged,
                 ferrying precious cargo from the serene studios nestled in the Himalayas to our central hub in
                 Berlin.</p>
-
+               
             <h4>The Journey</h2>
 
             <p>From Berlin, a city synonymous with a rich tapestry of art and culture, these masterpieces began
                 their journey to various corners of the globe. Every piece of art, lovingly created amidst the
                 tranquil mountainous landscapes, found a new home with art enthusiasts worldwide, connecting hearts
                 and telling stories that transcended language and culture.</p>
+                <img class="col-12 col-md-4 text-center float-right" src="https://res.cloudinary.com/dript5k0k/image/upload/v1695899340/Lama-_vcgo7k.jpg" alt="Buddhist monk painting on a canvas">
+
 
             <h4>Our Commitment</h2>
 
@@ -69,8 +74,22 @@
                 something truly magical. Together, we can ensure that the rich artistic traditions of Tibet and
                 Nepal continue to flourish, uniting us in a global community that celebrates beauty, craftsmanship,
                 and the human spirit.</p>
+                <img class="col-12 col-md-4 text-center mb-5" src="https://res.cloudinary.com/dript5k0k/image/upload/v1695899287/milarepa-mh-l1_xhfdte.webp" width="200px" alt="painting on the wall">
 
-            <p class="welcome-text">Welcome to the Tibet Art Shop - where every piece tells a story.</p>
+          
+                
+            <h4 class="mb-3">Why Choose Tibet Art Shop?</h4>
+            <ul id="reason">
+                <li>Exclusively curated collections from the heart of Tibet and Nepal;</li>
+                <li>Ethically sourced products, directly supporting local artisans and communities;</li>
+                <li>Experience the fusion of tradition and modern aesthetics;</li>
+                <li>Customized art consultancy for personalized choices;</li>
+                <li>Environmentally-conscious packaging ensuring minimal ecological footprint;</li>
+                <li>Dedicated art history resources to educate and inspire our customers;</li>
+                <li>Interactive workshops and events connecting you with the artisans world;</li>
+                <li>Part of the proceeds goes to Himalayan educational and cultural initiatives.</li>
+            </ul>
+            </div>
         </div>
     </div>
 </div>
