--- a/aboutus/templates/aboutus/privacy_policy.html
+++ b/aboutus/templates/aboutus/privacy_policy.html
@@ -15,7 +15,7 @@
     <div class="overlay"></div>
     <div class="container my-5">
         <h1>Privacy Policy of Tibet Art Store</h1>
-        <p><strong>Last updated:</strong> [Insert Date]</p>
+        <p><strong>Last updated:</strong> 1 September 2023</p>
 
         <p>At Tibet Art Store, we are committed to maintaining the trust and confidence of our visitors to our website and subscribers to our newsletter. Here you’ll find information on how we treat data that we collect from visitors to our website or when someone subscribes to our newsletter.</p>
 
@@ -63,3 +63,4 @@
             <li>By visiting our page: <a href="#contact">Contact Us</a></li>
         </ul>
     </div>
+{% endblock %}
