--- a/products/templates/products/update_product.html
+++ b/products/templates/products/update_product.html
@@ -1,4 +1,3 @@
-
 {% extends "base.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
@@ -15,12 +14,24 @@
 <div class="overlay"></div>
     <div class="container p-3">
         <div class="row">
-            <div class="col-12">
-                <form enctype="multipart/form-data" method="POST" action="{% url 'products_list' %}" class="form mb-2">
+            <div class="col-12 col-md-6 mt-4">
+                <hr>
+                <h2 class="col-12 text-center logo-font pb-2 my-5">Product Management</h2>
+                <h5 class="text-muted text-center">Edit a product</h5>
+                <hr>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <form enctype="multipart/form-data" method="post" action="{% url 'update_product' product.id %}" class="form mb-2">
                     {% csrf_token %}
-                    {{ form |crispy }}
-                    <button class="btn btn-black rounded" type="submit" >Update Product</button>
-                    <a class="btn btn-outline-black rounded" href="{% url 'products_list' %}">Cancel</a>
+                    {{ form | crispy }}
+                    
+                    <div class="text-right">
+                        <a class="btn btn-outline-black rounded" href="{% url 'products' %}">Cancel</a>
+                        <button class="btn btn-black rounded" type="submit" >Update Product</button>
+                    </div>
                 </form>
             </div>
         </div>
