--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -31,7 +31,7 @@
     </li>
     
     <li class="nav-item dropdown">
-      <a class="logo-font nav-link text-black mr-3" href="{% url 'article_list' %}" id="home-link">Blog</a>
+      <a class="logo-font nav-link text-black mr-3" href="{% url 'blogpost_list' %}" id="home-link">Blog</a>
     </li>
     <!-- Contact Us -->
     <li class="nav-item">
