Update style of home and cart templates

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,11 +11,13 @@
 {% endblock %}
 {% block content %}
 <div class="container h-100">
+    
     <div class="row mt-5 d-flex align-items-center custom-position">
         <div class="col-12 text-center">
-            <h1 class="display-4 text-black text-center text-md-left">
-                Discover the arts and crafts from the Himalayas!
-            </h1>
+            <h1 class="text-black text-center">
+                Welcome to the Tibet Art Shop: </h1>
+            <h2 class="text-center">Discover arts and crafts from the Himalayas, where every piece tells a story.</h2>
+
             <div class="my-5">
                 <h4>
                     <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded text-uppercase py3">Shop
