--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="col">
             <hr>
-            <h2 class="logo-font mb-4 ml-3">Shopping Cart</h2>
+            <h2 class="logo-font mb-4 text-center ml-3 text-align-center ">Shopping Cart</h2>
             <hr>
         </div>
     </div>
@@ -40,7 +40,11 @@
                             {% for item in cart_items %}
                                 <tr>
                                     <td class="p-3">
-                                        <img class="img-fluid rounded" src="/media/small/{{ item.product.productImageName }}" style="max-width: 100px;">
+                                        {% if item.product.productImageName %}
+                                        <img class="img-fluid rounded" src="/media/small/{{ item.product.productImageName }}" alt="{{ item.product.title }}" style="max-width: 200px;">
+                                        {% else %}
+                                        <img class="img-fluid rounded" src="{{ MEDIA_URL }} noimage.png" alt="{{ item.product.title }}">
+                                        {% endif %}
                                         <p class="d-block d-md-none my-0 font-weight-bold">{{ item.product.title }}</p>
                                     </td>
                                     <td class="py-3 d-none d-md-table-cell">
