--- a/comment/templates/comment/new_blogpost_comment.html
+++ b/comment/templates/comment/new_blogpost_comment.html
@@ -1,7 +1,14 @@
+
+
 {% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+
 {% block extra_title %} - Blogpost {% endblock %}
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'comment/css/comment.css' %}">
+{% endblock %}
 
 {% block page_header %}
 <div class="container header-container">
@@ -16,37 +23,49 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
-     <div class="row mb-2 mx-auto mb-5 d-block">
-        <div class="col 12">
-            <h2 class="mb-3">{{ blogpost.title }}</h2>
-            <img class="mx-auto mb-5 d-block" src="{{ MEDIA_URL }}{{ article.article_image_name }}" alt="" width="500px">
+    <div class="row mx-auto mb-5 d-block">
+        <div class="col-12">
+            <h2>{{ blogpost.title }}</h2>
+            <img class="mx-auto mb-5 d-block" src="{{ MEDIA_URL }}{{ blogpost.article_image_name }}" alt="" width="500px">
             <p class="mb-2">Written by: <span class="font-weight-bold">{{ blogpost.writer_name }}</span></p>
             <p class="mb-2">Published on: <span class="font-italic">{{ blogpost.published_date }}</span></p>
             <p class="mb-1">{{ blogpost.article_text|safe }}</p>
-            <br>
-            <br>
-        </div>
-        <div>
-            {% for comment in comments %}
-                <p>
-                    <strong>ID: {{ comment.id }}. | User: "{{ comment.user.username }}" | Date: {{ comment.date_time }}
-                    {% if request.user == comment.user %}
-                        <a href="{% url 'edit_blogpost_comment' blogpost.id comment.id %}"><i class="fa fa-edit"></i> Edit</a>
-                        <a href="{% url 'delete_blogpost_comment' comment.id %}"><i class="fa fa-trash"></i> Delete</a>
-                    {% endif %}
-                        </strong><br>
-                    {{ comment.comment_text|safe }}
-                </p>
-                <br>
-            {% endfor %}
-        </div>
-        <div>
-            <form method="post" action="{% if edit_mode %}{% url 'save_blogpost_comment_edit' blogpost.id comment_id %}{% else %}{% url 'save_blogpost_comment_new' blogpost.id %}{% endif %}">
-                {% csrf_token %}
-                {{ form | crispy }}
-                <input type="submit" value="Submit">
-            </form>
         </div>
     </div>
-</div>
+
+    <div class="comment-detail-card">
+        <h5 class="comment-detail-background m-3">Comments: {{ comments.count }}</h5>
+        <button class="btn btn-outline-dark m-2" type="button" data-bs-toggle="collapse" data-bs-target="#commentsCollapse" aria-expanded="false" aria-controls="commentsCollapse">
+            Show/Hide Comments
+        </button>
+    
+        <div class="collapse" id="commentsCollapse">
+            <div class="comment-detail-card">
+                {% for comment in comments %}
+                    <p><strong class="comment-detail-background"><i class="fa fa-user"></i></strong> {{ comment.user.username }}</p>
+                    <p><strong class="comment-detail-background font-italic">Comment:</strong> {{ comment.comment_text }}</p>
+                    <p><strong class="comment-detail-background font-italic">Posted on:</strong> {{ comment.date_time }}</p>
+                    
+
+                    {% if request.user == comment.user %}
+                        <a href="{% url 'edit_blogpost_comment' blogpost.id comment.id %}"><i class="fa fa-edit"></i>Edit</a>
+                        <a href="{% url 'delete_blogpost_comment' comment.id %}"><i class="fa fa-trash"></i>Delete</a>
+                    {% endif %}
+                    <hr>
+                {% empty %}
+                    <p>No comments yet.</p>
+                {% endfor %}
+
+                <div class="container mt-4">
+                    <h5>Leave a Comment:</h5>
+                    <form method="post" action="{% if edit_mode %}{% url 'save_blogpost_comment_edit' blogpost.id comment.id %}{% else %}{% url 'save_blogpost_comment_new' blogpost.id %}{% endif %}">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <input type="submit" value="Submit Comment" class="btn btn-primary mt-2">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
