--- a/blogpost/templates/blogpost/blogpost_list.html
+++ b/blogpost/templates/blogpost/blogpost_list.html
@@ -6,9 +6,8 @@
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
-        <div class="col text-center" style="background-color: white;">
-            <h1 class="display-4 my-3">Blog Post</h1>
-            <p></p>
+        <div class="col-12 text-center text-uppercase logo-font pb-2 my-5">
+            <div class="header-text">Blog</div>
         </div>
     </div>
 </div>
